# dependabot-rescue

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: design.md  plan.md
src/dependabot_rescue/: __init__.py  analysis.py  cli.py  logs.py  models.py  providers.py  reporting.py  updates.py
tests/: test_cli.py  test_logs.py  test_updates.py
tests/fixtures/: dependabot_event.json  renovate_body.txt
